# linux-lab

./: CMakeLists.txt  CMakePresets.json  Makefile
src/clock/: CMakeLists.txt  clock.cpp  clock.h  main.cpp  shortcut.mk
src/command/: base_command.h
src/cpp_thread/: CMakeLists.txt  detach.cpp  join.cpp  shortcut.mk
src/dynamic_lib/: Makefile
src/exception/: exception.h  invalid_usage_exception.h
src/fileio/: CMakeLists.txt  copy_sys_invoke.cpp  copy_with_stdlib.cpp  file_link.cpp  shortcut.mk
src/ipc_anonymous_pipe/: CMakeLists.txt  main.c  shortcut.mk
src/ipc_named_pipe/: CMakeLists.txt  common.c  common.h  receiver.c  sender.c  shortcut.mk
src/lib_shared/: algebra.c  algebra.h  main.c
src/logger/: logger.h
src/makefile/: Makefile
src/makefile/inc/: substract.h
src/makefile/src/: division.c  main.c  substract.c
src/recursive_dir_read/: CMakeLists.txt  recursive_dir_read.cpp  shortcut.mk
src/static_lib/: Makefile
